[package]
name = "stickbot"
version = "0.1.0"
edition = "2018"

[lib]
name = "stickbot"
path = "src/lib.rs"

[[bin]]
name = "stickbot"
path = "src/bin/stickbot.rs"

[[bin]]
name = "boxbot"
path = "src/bin/boxbot.rs"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
twowaiyo = { path =  "../twowaiyo" }
bankah = { path =  "../bankah" }
async-std = { version = "^1.5.0" }
mongodb = { version = "^2.0.0", features = ["async-std-runtime"], default-features = false }
tide = { version = "^0.16.0" }
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }
