[package]
name = "stickbot"
version = "0.3.4"
edition = "2018"

[lib]
name = "stickbot"
path = "src/lib.rs"

[[bin]]
name = "stickbot"
path = "src/bin/stickbot.rs"

[[bin]]
name = "boxbot"
path = "src/bin/boxbot.rs"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
twowaiyo = { path =  "../twowaiyo" }
bankah = { path =  "../bankah" }
async-std = { version = "^1.5.0" }
mongodb = { version = "^2.0.0", features = ["async-std-runtime", "bson-uuid-0_8"], default-features = false }
bson = { version = "2.0.0", features = ["uuid-0_8"] }
serde_json = { version = "1.0" }
tide = { version = "^0.16.0" }
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }
http-types = { version = "^2.0" }
surf = { version = "^2.3.0" }
uuid = { version = "^0.8", features = ["v4"] }
jsonwebtoken = { version = "^7.2.0" }
kramer = { version = "^1.1.0", features = ["kramer-async"] }
getrandom = { version = "^0.2" }
