[package]
name = "twowaiyo"
version = "0.3.4"
edition = "2018"

[lib]
name = "twowaiyo"
path = "src/lib.rs"

[[bin]]
name = "twowaiyo"
path = "src/bin/main.rs"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
getrandom = { version = "^0.2" }
uuid = { version = "^0.8", features = ["v4"] }
bankah = { path = "../bankah" }
